# gametest

./: .gitignore  CMakeLists.txt  Directory.build.proj  Directory.build.targets  Jenkinsfile  README.md  build.csproj  build.proj  dirs.proj  tests.props
buildTargets/: common.Build.props  common.targets
cmake-modules/: FindASSIMP.cmake  FindAssimp.cmake  FindIRRXML.cmake  FindIrrXML.cmake
doc/design/: components.md  contributors.md  overview.md  quality.md  readme.md
doc/design/modules/: math.md
include/Common/: ArgumentCheck.hpp  CommandLineArgumentException.hpp  CommandLineArguments.hpp  Configuration.hpp  Constants.hpp  EndOfInputException.hpp  FileUtil.hpp  ISerializable.hpp  IString.hpp  Json.hpp  Logger.hpp  StringUtil.hpp  Template.hpp  Timer.hpp  Util.hpp  Version.hpp
include/Engine/: Engine.hpp
include/Math/: ArrayVector.hpp  Matrix4.hpp  Operations.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VectorBase.hpp
include/Math/SIMD/: Matrix4.hpp  SIMDVector.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/Platform/: Chooser.hpp  Window.hpp
include/Platform/OSX/: OSXWindow.hpp
include/Platform/Windows/: WindowsWindow.hpp
include/Platform/X11/: X11Window.hpp
include/Render/: Color.hpp  IRenderable.hpp  OpenGL.hpp  RenderType.hpp  Renderer.hpp  Sphere.hpp
include/Resource/: BlenderFile.hpp  BlenderLoader.hpp  FragmentShader.hpp  IResource.hpp  Json.hpp  Model.hpp  ResourceFactory.hpp  Shader.hpp  ShaderFactory.hpp  ShaderProgram.hpp  VertexShader.hpp
include/Sync/: Lock.hpp
lib/IrrXML/lib/: IrrXML.lib
lib/assimp/include/collada/: ColladaLoader.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h  glad_glx.h
lib/glad/src/: glad.c  glad_glx.c
lib/glbinding-2.1.3/: glbinding-config.cmake
lib/glbinding-2.1.3/cmake/glbinding/: glbinding-export-release.cmake  glbinding-export.cmake
models/: cube.dae  red_triangle.json
shaders/: red.frag
shaders/fragment/: red.json
shaders/programs/: default.json
shaders/vertex/: passthrough.json  passthrough.vert
src/: Common.vcxproj  Common.vcxproj.filters  Math.vcxproj  Math.vcxproj.filters  Resource.vcxproj  Resource.vscproj.filters  main.cpp
src/Common/: CMakeLists.txt  CommandLineArguments.cpp  CommandLineArguments.hpp  Configuration.cpp  Configuration.hpp  Constants.cpp  Constants.hpp  FileUtil.cpp  ISerializable.hpp  IString.cpp  Logger.cpp  StringUtil.cpp  Timer.cpp  Util.hpp  Version.cpp  Version.hpp  common.csproj
src/Common/tests/: CommandLineArguments.Tests.cpp
src/CommonTest/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/Main/: CMakeLists.txt  main.cpp
src/Math/: CMakeLists.txt  Matrix4.hpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  Vec4.hpp  VectorBase.hpp
src/Math/SIMD/: Vec2.cpp  Vec3.cpp  Vec4.cpp
src/Math/Tests/: Matrix4.Tests.cpp
src/MathTest/: CMakeLists.txt
src/Platform/: CMakeLists.txt  Chooser.cpp  Window.cpp
src/Platform/OSX/: OSXWindow.cpp
src/Platform/Windows/: WindowsWindow.cpp
src/Platform/X11/: X11Window.cpp
src/Render/: CMakeLists.txt  Color.cpp  IRenderable.hpp  OpenGL.cpp  RenderType.cpp  RenderType.hpp  Renderer.cpp  Sphere.cpp
src/Resource/: BlenderFile.cpp  BlenderLoader.cpp  CMakeLists.txt  FragmentShader.cpp  Json.cpp  Model.cpp  ResourceFactory.hpp  Shader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexShader.cpp
test/Common/: CommandLineArguments.Tests.cpp
test/Math/: ArrayVector.cpp  CMakeLists.txt  Matrix4.Tests.cpp  Vec2.Test.cpp  Vec3.Test.cpp  Vec4.Test.cpp
test/Platform/: CMakeLists.txt  Window.Tests.cpp
test/Resource/: CMakeLists.txt  Model.Test.cpp  Resource.Test.cpp  ShaderProgram.Tests.cpp  test.json
